--- a/references.bib
+++ b/references.bib
@@ -13,6 +13,22 @@
   primaryclass = {cs.DC}
 }
 
+@article{Addison.Wright.ea2021,
+  title = {{{TOI}}-257b ({{HD}} 19916b): A Warm Sub-Saturn Orbiting an Evolved {{F}}-Type Star},
+  shorttitle = {{{TOI}}-257b ({{HD}} 19916b)},
+  author = {Addison, Brett C. and Wright, Duncan J. and Nicholson, Belinda A. and Cale, Bryson and Mocnik, Teo and Huber, Daniel and Plavchan, Peter and Wittenmyer, Robert A. and Vanderburg, Andrew and Chaplin, William J. and Chontos, Ashley and Clark, Jake T. and Eastman, Jason D. and Ziegler, Carl and Brahm, Rafael and Carter, Bradley D. and Clerte, Mathieu and Espinoza, N{\'e}stor and Horner, Jonathan and Bentley, John and Jord{\'a}n, Andr{\'e}s and Kane, Stephen R. and Kielkopf, John F. and Laychock, Emilie and Mengel, Matthew W. and Okumura, Jack and Stassun, Keivan G. and Bedding, Timothy R. and Bowler, Brendan P. and Burnelis, Andrius and {Blanco-Cuaresma}, Sergi and Collins, Michaela and Crossfield, Ian and Davis, Allen B. and Evensberget, Dag and Heitzmann, Alexis and Howell, Steve B. and Law, Nicholas and Mann, Andrew W. and Marsden, Stephen C. and Matson, Rachel A. and O'Connor, James H. and Shporer, Avi and Stevens, Catherine and Tinney, C. G. and Tylor, Christopher and Wang, Songhu and Zhang, Hui and Henning, Thomas and Kossakowski, Diana and Ricker, George and Sarkis, Paula and Schlecker, Martin and Torres, Pascal and Vanderspek, Roland and Latham, David W. and Seager, Sara and Winn, Joshua N. and Jenkins, Jon M. and Mireles, Ismael and Rowden, Pam and Pepper, Joshua and Daylan, Tansu and Schlieder, Joshua E. and Collins, Karen A. and Collins, Kevin I. and Tan, Thiam-Guan and Ball, Warrick H. and Basu, Sarbani and Buzasi, Derek L. and Campante, Tiago L. and Corsaro, Enrico and {Gonz{\'a}lez-Cuesta}, L. and Davies, Guy R. and {de Almeida}, Leandro and {do Nascimento}, Jr., Jose-Dias and Garc{\'i}a, Rafael A. and Guo, Zhao and Handberg, Rasmus and Hekker, Saskia and Hey, Daniel R. and Kallinger, Thomas and Kawaler, Steven D. and Kayhan, Cenk and Kuszlewicz, James S. and Lund, Mikkel N. and Lyttle, Alexander and Mathur, Savita and Miglio, Andrea and Mosser, Benoit and Nielsen, Martin B. and Serenelli, Aldo M. and Aguirre, Victor Silva and Theme{\ss}l, Nathalie},
+  year = {2021},
+  month = apr,
+  volume = {502},
+  pages = {3704--3722},
+  issn = {0035-8711},
+  doi = {10.1093/mnras/staa3960},
+  abstract = {We report the discovery of a warm sub-Saturn, TOI-257b (HD 19916b), based on data from NASA's Transiting Exoplanet Survey Satellite (TESS). The transit signal was detected by TESS and confirmed to be of planetary origin based on radial velocity observations. An analysis of the TESS photometry, the MINERVA-Australis, FEROS, and HARPS radial velocities, and the asteroseismic data of the stellar oscillations reveals that TOI-257b has a mass of MP = 0.138 {$\pm$} 0.023 \$\textbackslash rm \{M\_J\}\$ (43.9 {$\pm$} 7.3 \$\textbackslash, M\_\{\textbackslash rm \textbackslash oplus\}\$ ), a radius of RP = 0.639 {$\pm$} 0.013 \$\textbackslash rm \{R\_J\}\$ (7.16 {$\pm$} 0.15 \$\textbackslash, \textbackslash mathrm\{ R\}\_\{\textbackslash rm \textbackslash oplus\}\$ ), bulk density of \$0.65\^\{+0.12\}\_\{-0.11\}\$ (cgs), and period \$18.38818\^\{+0.00085\}\_\{-0.00084\}\$ \$\textbackslash rm \{days\}\$ . TOI-257b orbits a bright (V = 7.612 mag) somewhat evolved late F-type star with M* = 1.390 {$\pm$} 0.046 \$\textbackslash rm \{M\_\{sun\}\}\$ , R* = 1.888 {$\pm$} 0.033 \$\textbackslash rm \{R\_\{sun\}\}\$ , Teff = 6075 {$\pm$} 90 \$\textbackslash rm \{K\}\$ , and vsin i = 11.3 {$\pm$} 0.5 km s-1. Additionally, we find hints for a second non-transiting sub-Saturn mass planet on a {$\sim$}71 day orbit using the radial velocity data. This system joins the ranks of a small number of exoplanet host stars ({$\sim$}100) that have been characterized with asteroseismology. Warm sub-Saturns are rare in the known sample of exoplanets, and thus the discovery of TOI-257b is important in the context of future work studying the formation and migration history of similar planetary systems.},
+  author+an = {87=highlight},
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  keywords = {asteroseismology,planetary systems,stars: individual (TIC 200723869/TOI-257),techniques: photometric,techniques: radial velocities,techniques: spectroscopic}
+}
+
 @article{Ahumada.Prieto.ea2020,
   title = {The 16th Data Release of the Sloan Digital Sky Surveys: {{First}} Release from the {{APOGEE}}-2 Southern Survey and Full Release of {{eBOSS}} Spectra},
   author = {Ahumada, Romina and Prieto, Carlos Allende and Almeida, Andr{\'e}s and Anders, Friedrich and Anderson, Scott F. and Andrews, Brett H. and Anguiano, Borja and Arcodia, Riccardo and Armengaud, Eric and Aubert, Marie and Avila, Santiago and {Avila-Reese}, Vladimir and Badenes, Carles and Balland, Christophe and Barger, Kat and {Barrera-Ballesteros}, Jorge K. and Basu, Sarbani and Bautista, Julian and Beaton, Rachael L. and Beers, Timothy C. and Benavides, B. Izamar T. and Bender, Chad F. and Bernardi, Mariangela and Bershady, Matthew and Beutler, Florian and Bidin, Christian Moni and Bird, Jonathan and Bizyaev, Dmitry and Blanc, Guillermo A. and Blanton, Michael R. and Boquien, M{\'e}d{\'e}ric and Borissova, Jura and Bovy, Jo and Brandt, W. N. and Brinkmann, Jonathan and Brownstein, Joel R. and Bundy, Kevin and Bureau, Martin and Burgasser, Adam and Burtin, Etienne and {Cano-D{\'i}az}, Mariana and Capasso, Raffaella and Cappellari, Michele and Carrera, Ricardo and Chabanier, Sol{\`e}ne and Chaplin, William and Chapman, Michael and Cherinka, Brian and Chiappini, Cristina and Doohyun Choi, Peter and Chojnowski, S. Drew and Chung, Haeun and Clerc, Nicolas and Coffey, Damien and Comerford, Julia M. and Comparat, Johan and {da Costa}, Luiz and Cousinou, Marie-Claude and Covey, Kevin and Crane, Jeffrey D. and Cunha, Katia and Ilha, Gabriele da Silva and Dai, Yu Sophia and Damsted, Sanna B. and Darling, Jeremy and Davidson, James W., Jr. and Davies, Roger and Dawson, Kyle and De, Nikhil and {de la Macorra}, Axel and De Lee, Nathan and Queiroz, Anna B{\'a}rbara de Andrade and Deconto Machado, Alice and {de la Torre}, Sylvain and Dell'Agli, Flavia and {du Mas des Bourboux}, H{\'e}lion and {Diamond-Stanic}, Aleksandar M. and Dillon, Sean and Donor, John and Drory, Niv and Duckworth, Chris and Dwelly, Tom and Ebelke, Garrett and Eftekharzadeh, Sarah and Davis Eigenbrot, Arthur and Elsworth, Yvonne P. and Eracleous, Mike and Erfanianfar, Ghazaleh and Escoffier, Stephanie and Fan, Xiaohui and Farr, Emily and {Fern{\'a}ndez-Trincado}, Jos{\'e} G. and Feuillet, Diane and Finoguenov, Alexis and Fofie, Patricia and {Fraser-McKelvie}, Amelia and Frinchaboy, Peter M. and Fromenteau, Sebastien and Fu, Hai and Galbany, Llu{\'i}s and Garcia, Rafael A. and {Garc{\'i}a-Hern{\'a}ndez}, D. A. and Oehmichen, Luis Alberto Garma and Ge, Junqiang and Maia, Marcio Antonio Geimba and Geisler, Doug and Gelfand, Joseph and Goddy, Julian and {Gonzalez-Perez}, Violeta and Grabowski, Kathleen and Green, Paul and Grier, Catherine J. and Guo, Hong and Guy, Julien and Harding, Paul and Hasselquist, Sten and Hawken, Adam James and Hayes, Christian R. and Hearty, Fred and Hekker, S. and Hogg, David W. and Holtzman, Jon A. and Horta, Danny and Hou, Jiamin and Hsieh, Bau-Ching and Huber, Daniel and Hunt, Jason A. S. and Chitham, J. Ider and Imig, Julie and Jaber, Mariana and Angel, Camilo Eduardo Jimenez and Johnson, Jennifer A. and Jones, Amy M. and J{\"o}nsson, Henrik and Jullo, Eric and Kim, Yerim and Kinemuchi, Karen and Kirkpatrick, Charles C., IV and Kite, George W. and Klaene, Mark and Kneib, Jean-Paul and Kollmeier, Juna A. and Kong, Hui and Kounkel, Marina and Krishnarao, Dhanesh and Lacerna, Ivan and Lan, Ting-Wen and Lane, Richard R. and Law, David R. and Le Goff, Jean-Marc and Leung, Henry W. and Lewis, Hannah and Li, Cheng and Lian, Jianhui and Lin, Lihwai and Long, Dan and {Longa-Pe{\~n}a}, Pen{\'e}lope and Lundgren, Britt and Lyke, Brad W. and Ted Mackereth, J. and MacLeod, Chelsea L. and Majewski, Steven R. and Manchado, Arturo and Maraston, Claudia and Martini, Paul and Masseron, Thomas and Masters, Karen L. and Mathur, Savita and McDermid, Richard M. and Merloni, Andrea and Merrifield, Michael and M{\'e}sz{\'a}ros, Szabolcs and Miglio, Andrea and Minniti, Dante and Minsley, Rebecca and Miyaji, Takamitsu and Mohammad, Faizan Gohar and Mosser, Benoit and Mueller, Eva-Maria and Muna, Demitri and {Mu{\~n}oz-Guti{\'e}rrez}, Andrea and Myers, Adam D. and Nadathur, Seshadri and Nair, Preethi and Nandra, Kirpal and {do Nascimento}, Janaina Correa and Nevin, Rebecca Jean and Newman, Jeffrey A. and Nidever, David L. and Nitschelm, Christian and Noterdaeme, Pasquier and O'Connell, Julia E. and Olmstead, Matthew D. and Oravetz, Daniel and Oravetz, Audrey and Osorio, Yeisson and Pace, Zachary J. and Padilla, Nelson and {Palanque-Delabrouille}, Nathalie and Palicio, Pedro A. and Pan, Hsi-An and Pan, Kaike and Parker, James and Paviot, Romain and Peirani, Sebastien and Ram{\'r}ez, Karla Pe{\~n}a and Penny, Samantha and Percival, Will J. and {Perez-Fournon}, Ismael and {P{\'e}rez-R{\`a}fols}, Ignasi and Petitjean, Patrick and Pieri, Matthew M. and Pinsonneault, Marc and Poovelil, Vijith Jacob and Povick, Joshua Tyler and Prakash, Abhishek and {Price-Whelan}, Adrian M. and Raddick, M. Jordan and Raichoor, Anand and Ray, Amy and Rembold, Sandro Barboza and Rezaie, Mehdi and Riffel, Rogemar A. and Riffel, Rog{\'e}rio and Rix, Hans-Walter and Robin, Annie C. and {Roman-Lopes}, A. and {Rom{\'a}n-Z{\'u}{\~n}iga}, Carlos and Rose, Benjamin and Ross, Ashley J. and Rossi, Graziano and Rowlands, Kate and Rubin, Kate H. R. and Salvato, Mara and S{\'a}nchez, Ariel G. and {S{\'a}nchez-Menguiano}, Laura and {S{\'a}nchez-Gallego}, Jos{\'e} R. and Sayres, Conor and Schaefer, Adam and Schiavon, Ricardo P. and Schimoia, Jaderson S. and Schlafly, Edward and Schlegel, David and Schneider, Donald P. and Schultheis, Mathias and Schwope, Axel and Seo, Hee-Jong and Serenelli, Aldo and Shafieloo, Arman and Shamsi, Shoaib Jamal and Shao, Zhengyi and Shen, Shiyin and Shetrone, Matthew and Shirley, Raphael and Aguirre, V{\'i}ctor Silva and Simon, Joshua D. and Skrutskie, M. F. and Slosar, An{\v z}e and Smethurst, Rebecca and Sobeck, Jennifer and Sodi, Bernardo Cervantes and Souto, Diogo and Stark, David V. and Stassun, Keivan G. and Steinmetz, Matthias and Stello, Dennis and Stermer, Julianna and {Storchi-Bergmann}, Thaisa and Streblyanska, Alina and Stringfellow, Guy S. and Stutz, Amelia and Su{\'a}rez, Genaro and Sun, Jing and {Taghizadeh-Popp}, Manuchehr and Talbot, Michael S. and Tayar, Jamie and Thakar, Aniruddha R. and Theriault, Riley and Thomas, Daniel and Thomas, Zak C. and Tinker, Jeremy and Tojeiro, Rita and Toledo, Hector Hernandez and Tremonti, Christy A. and Troup, Nicholas W. and Tuttle, Sarah and {Unda-Sanzana}, Eduardo and Valentini, Marica and {Vargas-Gonz{\'a}lez}, Jaime and {Vargas-Maga{\~n}a}, Mariana and {V{\'a}zquez-Mata}, Jose Antonio and Vivek, M. and Wake, David and Wang, Yuting and Weaver, Benjamin Alan and Weijmans, Anne-Marie and Wild, Vivienne and Wilson, John C. and Wilson, Robert F. and Wolthuis, Nathan and {Wood-Vasey}, W. M. and Yan, Renbin and Yang, Meng and Y{\`e}che, Christophe and Zamora, Olga and Zarrouk, Pauline and Zasowski, Gail and Zhang, Kai and Zhao, Cheng and Zhao, Gongbo and Zheng, Zheng and Zheng, Zheng and Zhu, Guangtun and Zou, Hu},
@@ -24,13 +40,13 @@
   abstract = {This paper documents the 16th data release (DR16) from the Sloan Digital Sky Surveys (SDSS), the fourth and penultimate from the fourth phase (SDSS-IV). This is the first release of data from the Southern Hemisphere survey of the Apache Point Observatory Galactic Evolution Experiment 2 (APOGEE-2); new data from APOGEE-2 North are also included. DR16 is also notable as the final data release for the main cosmological program of the Extended Baryon Oscillation Spectroscopic Survey (eBOSS), and all raw and reduced spectra from that project are released here. DR16 also includes all the data from the Time Domain Spectroscopic Survey and new data from the SPectroscopic IDentification of ERosita Survey programs, both of which were co-observed on eBOSS plates. DR16 has no new data from the Mapping Nearby Galaxies at Apache Point Observatory (MaNGA) survey (or the MaNGA Stellar Library ``MaStar''). We also preview future SDSS-V operations (due to start in 2020), and summarize plans for the final SDSS-IV data release (DR17).},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System},
   adsurl = {https://ui.adsabs.harvard.edu/abs/2020ApJS..249....3A},
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eid = {3},
   eprint = {1912.02905},
   eprinttype = {arxiv},
   keywords = {1174,1378,1624,1630,2002,786,83,Astronomy databases,Astrophysics - Astrophysics of Galaxies,Astrophysics - Cosmology and Nongalactic Astrophysics,Astrophysics - Instrumentation and Methods for Astrophysics,Galactic abundances,Infrared astronomy,Optical telescopes,Redshift surveys,Stellar properties,Stellar spectral lines},
   number = {1},
-  primaryClass = {astro-ph.GA}
+  primaryclass = {astro-ph.GA}
 }
 
 @article{Albareti.AllendePrieto.ea2017,
@@ -777,13 +793,13 @@
   month = nov,
   abstract = {We introduce the "exponential linear unit" (ELU) which speeds up learning in deep neural networks and leads to higher classification accuracies. Like rectified linear units (ReLUs), leaky ReLUs (LReLUs) and parametrized ReLUs (PReLUs), ELUs alleviate the vanishing gradient problem via the identity for positive values. However, ELUs have improved learning characteristics compared to the units with other activation functions. In contrast to ReLUs, ELUs have negative values which allows them to push mean unit activations closer to zero like batch normalization but with lower computational complexity. Mean shifts toward zero speed up learning by bringing the normal gradient closer to the unit natural gradient because of a reduced bias shift effect. While LReLUs and PReLUs have negative values, too, they do not ensure a noise-robust deactivation state. ELUs saturate to a negative value with smaller inputs and thereby decrease the forward propagated variation and information. Therefore, ELUs code the degree of presence of particular phenomena in the input, while they do not quantitatively model the degree of their absence. In experiments, ELUs lead not only to faster learning, but also to significantly better generalization performance than ReLUs and LReLUs on networks with more than 5 layers. On CIFAR-100 ELUs networks significantly outperform ReLU networks with batch normalization while batch normalization does not improve ELU networks. ELU networks are among the top 10 reported CIFAR-10 results and yield the best published result on CIFAR-100, without resorting to multi-view evaluation or model averaging. On ImageNet, ELU networks considerably speed up learning compared to a ReLU network with the same architecture, obtaining less than 10\% classification error for a single crop, single model network.},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eid = {arXiv:1511.07289},
   eprint = {1511.07289},
   eprinttype = {arxiv},
   journal = {ArXiv e-prints},
   keywords = {Computer Science - Machine Learning},
-  primaryClass = {cs.LG}
+  primaryclass = {cs.LG}
 }
 
 @article{Coc.Uzan.ea2013,
@@ -793,13 +809,13 @@
   month = jul,
   abstract = {Primordial or Big Bang nucleosynthesis (BBN) is one of the three historical strong evidences for the Big-Bang model together with the expansion of the Universe and the Cosmic Microwave Background radiation (CMB). The recent results by the Planck mission have slightly changed the estimate of the baryonic density Omega\_b, compared to the previous WMAP value. This article updates the BBN predictions for the light elements using the new value of Omega\_b determined by Planck, as well as an improvement of the nuclear network and new spectroscopic observations. While there is no major modification, the error bars of the primordial D/H abundance (2.67+/-0.09) x 10\^\{-5\} are narrower and there is a slight lowering of the primordial Li/H abundance (4.89\^+0.41\_-0.39) x 10\^\{-10\}. However, this last value is still -0.5ex\textasciitilde 3 times larger than its observed spectroscopic abundance in halo stars of the Galaxy. Primordial Helium abundance is now determined to be Y\_p = 0.2463+/-0.0003.},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eid = {arXiv:1307.6955},
   eprint = {1307.6955},
   eprinttype = {arxiv},
   journal = {ArXiv e-prints},
   keywords = {Astrophysics - Cosmology and Extragalactic Astrophysics},
-  primaryClass = {astro-ph.CO}
+  primaryclass = {astro-ph.CO}
 }
 
 @article{Connelly.Bizzarro.ea2012,
@@ -957,13 +973,13 @@
   month = nov,
   abstract = {The TensorFlow Distributions library implements a vision of probability theory adapted to the modern deep-learning paradigm of end-to-end differentiable computation. Building on two basic abstractions, it offers flexible building blocks for probabilistic computation. Distributions provide fast, numerically stable methods for generating samples and computing statistics, e.g., log density. Bijectors provide composable volume-tracking transformations with automatic caching. Together these enable modular construction of high dimensional distributions and transformations not possible with previous libraries (e.g., pixelCNNs, autoregressive flows, and reversible residual networks). They are the workhorse behind deep probabilistic programming systems like Edward and empower fast black-box inference in probabilistic models built on deep-network components. TensorFlow Distributions has proven an important part of the TensorFlow toolkit within Google and in the broader deep learning community.},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eid = {arXiv:1711.10604},
   eprint = {1711.10604},
   eprinttype = {arxiv},
   journal = {ArXiv e-prints},
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Machine Learning,Computer Science - Programming Languages,Statistics - Machine Learning},
-  primaryClass = {cs.LG}
+  primaryclass = {cs.LG}
 }
 
 @article{Dotter.Conroy.ea2017,
@@ -1383,13 +1399,13 @@
   month = aug,
   abstract = {We go through the many considerations involved in fitting a model to data, using as an example the fit of a straight line to a set of points in a two-dimensional plane. Standard weighted least-squares fitting is only appropriate when there is a dimension along which the data points have negligible uncertainties, and another along which all the uncertainties can be described by Gaussians of known variance; these conditions are rarely met in practice. We consider cases of general, heterogeneous, and arbitrarily covariant two-dimensional uncertainties, and situations in which there are bad data (large outliers), unknown uncertainties, and unknown but expected intrinsic scatter in the linear relationship being fit. Above all we emphasize the importance of having a "generative model" for the data, even an approximate one. Once there is a generative model, the subsequent fitting is non-arbitrary because the model permits direct computation of the likelihood of the parameters or the posterior probability distribution. Construction of a posterior probability distribution is indispensible if there are "nuisance parameters" to marginalize away.},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eid = {arXiv:1008.4686},
   eprint = {1008.4686},
   eprinttype = {arxiv},
   journal = {ArXiv e-prints},
   keywords = {Astrophysics - Instrumentation and Methods for Astrophysics,Physics - Data Analysis,Statistics and Probability},
-  primaryClass = {astro-ph.IM}
+  primaryclass = {astro-ph.IM}
 }
 
 @article{Hogg.Foreman-Mackey2018,
@@ -1430,13 +1446,13 @@
   month = may,
   abstract = {In this pedagogical text aimed at those wanting to start thinking about or brush up on probabilistic inference, I review the rules by which probability distribution functions can (and cannot) be combined. I connect these rules to the operations performed in probabilistic data analysis. Dimensional analysis is emphasized as a valuable tool for helping to construct non-wrong probabilistic statements. The applications of probability calculus in constructing likelihoods, marginalized likelihoods, posterior probabilities, and posterior predictions are all discussed.},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eid = {arXiv:1205.4446},
   eprint = {1205.4446},
   eprinttype = {arxiv},
   journal = {ArXiv e-prints},
   keywords = {Astrophysics - Instrumentation and Methods for Astrophysics,Physics - Data Analysis,Statistics and Probability},
-  primaryClass = {physics.data-an}
+  primaryclass = {physics.data-an}
 }
 
 @article{Hon.Bellinger.ea2020,
@@ -1672,13 +1688,13 @@
   month = dec,
   abstract = {We introduce Adam, an algorithm for first-order gradient-based optimization of stochastic objective functions, based on adaptive estimates of lower-order moments. The method is straightforward to implement, is computationally efficient, has little memory requirements, is invariant to diagonal rescaling of the gradients, and is well suited for problems that are large in terms of data and/or parameters. The method is also appropriate for non-stationary objectives and problems with very noisy and/or sparse gradients. The hyper-parameters have intuitive interpretations and typically require little tuning. Some connections to related algorithms, on which Adam was inspired, are discussed. We also analyze the theoretical convergence properties of the algorithm and provide a regret bound on the convergence rate that is comparable to the best known results under the online convex optimization framework. Empirical results demonstrate that Adam works well in practice and compares favorably to other stochastic optimization methods. Finally, we discuss AdaMax, a variant of Adam based on the infinity norm.},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eid = {arXiv:1412.6980},
   eprint = {1412.6980},
   eprinttype = {arxiv},
   journal = {ArXiv e-prints},
   keywords = {Computer Science - Machine Learning},
-  primaryClass = {cs.LG}
+  primaryclass = {cs.LG}
 }
 
 @article{Kippenhahn.Weigert.ea1967,
@@ -1961,13 +1977,13 @@
   month = apr,
   abstract = {Modern deep neural network training is typically based on mini-batch stochastic gradient optimization. While the use of large mini-batches increases the available computational parallelism, small batch training has been shown to provide improved generalization performance and allows a significantly smaller memory footprint, which might also be exploited to improve machine throughput. In this paper, we review common assumptions on learning rate scaling and training duration, as a basis for an experimental comparison of test performance for different mini-batch sizes. We adopt a learning rate that corresponds to a constant average weight update per gradient calculation (i.e., per unit cost of computation), and point out that this results in a variance of the weight updates that increases linearly with the mini-batch size \$m\$. The collected experimental results for the CIFAR-10, CIFAR-100 and ImageNet datasets show that increasing the mini-batch size progressively reduces the range of learning rates that provide stable convergence and acceptable test performance. On the other hand, small mini-batch sizes provide more up-to-date gradient calculations, which yields more stable and reliable training. The best performance has been consistently obtained for mini-batch sizes between \$m = 2\$ and \$m = 32\$, which contrasts with recent work advocating the use of mini-batch sizes in the thousands.},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eid = {arXiv:1804.07612},
   eprint = {1804.07612},
   eprinttype = {arxiv},
   journal = {ArXiv e-prints},
   keywords = {Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning,Statistics - Machine Learning},
-  primaryClass = {cs.LG}
+  primaryclass = {cs.LG}
 }
 
 @article{Mazumdar.Monteiro.ea2014,
@@ -2126,16 +2142,20 @@
   keywords = {stars: evolution,stars: interiors,stars: oscillations}
 }
 
-@article{Nielsen.Davies.ea2020,
-  title = {{{PBjam}}: {{A Python}} Package for Automating Asteroseismology of Solar-like Oscillators},
+@article{Nielsen.Davies.ea2021,
+  title = {{{PBjam}}: {{A Python Package}} for {{Automating Asteroseismology}} of {{Solar}}-like {{Oscillators}}},
   shorttitle = {{{PBjam}}},
   author = {Nielsen, M. B. and Davies, G. R. and Ball, W. H. and Lyttle, A. J. and Li, T. and Hall, O. J. and Chaplin, W. J. and Gaulme, P. and Carboneau, L. and Ong, J. M. J. and Garc{\'i}a, R. A. and Mosser, B. and Roxburgh, I. W. and Corsaro, E. and Benomar, O. and Moya, A. and Lund, M. N.},
-  year = {2020},
-  month = dec,
-  volume = {2012},
-  abstract = {Asteroseismology is an exceptional tool for studying stars by using the  properties of observed modes of oscillation. So far the process of performing an asteroseismic analysis of a star has remained somewhat esoteric and inaccessible to non-experts. In this software paper we describe PBjam, an open-source Python package for analyzing the frequency spectra of solar-like oscillators in a simple but principled and automated way. The aim of PBjam is to provide a set of easy-to-use tools to extract information about the radial and quadrupole oscillations in stars that oscillate like the Sun, which may then be used to infer bulk properties such as stellar mass, radius and age or even structure. Asteroseismology and its data analysis methods are becoming increasingly important as space-based photometric observatories are producing a wealth of new data, allowing asteroseismology to be applied in a wide range of contexts such as exoplanet, stellar structure and evolution, and Galactic population studies.},
-  journal = {arXiv e-prints},
-  keywords = {Astrophysics - Solar and Stellar Astrophysics}
+  year = {2021},
+  month = feb,
+  volume = {161},
+  pages = {62},
+  issn = {0004-6256},
+  doi = {10.3847/1538-3881/abcd39},
+  abstract = {Asteroseismology is an exceptional tool for studying stars using the  properties of observed modes of oscillation. So far the process of performing an asteroseismic analysis of a star has remained somewhat esoteric and inaccessible to nonexperts. In this software paper we describe PBjam, an open-source Python package for analyzing the frequency spectra of solar-like oscillators in a simple but principled and automated way. The aim of PBjam is to provide a set of easy-to-use tools to extract information about the radial and quadropole oscillations in stars that oscillate like the Sun, which may then be used to infer bulk properties such as stellar mass, radius, age, or even structure. Asteroseismology and its data analysis methods are becoming increasingly important as space-based photometric observatories are producing a wealth of new data, allowing asteroseismology to be applied in a wide range of contexts such as exoplanet, stellar structure and evolution, and Galactic population studies.  * Release 1.0.0 Zenodo, doi:10.5281/zenodo.4300079.},
+  author+an = {4=highlight},
+  journal = {The Astronomical Journal},
+  keywords = {1617,1855,1858,1864,73,Asteroseismology,Astronomy data analysis,Astronomy software,Publicly available software,Stellar oscillations}
 }
 
 @article{Nissen.SilvaAguirre.ea2017,
@@ -2176,7 +2196,7 @@
   issn = {1099-4300},
   doi = {10.3390/e21070627},
   abstract = {There has been a growing interest in expressivity of deep neural networks. However, most of the existing work about this topic focuses only on the specific activation function such as ReLU or sigmoid. In this paper, we investigate the approximation ability of deep neural networks with a broad class of activation functions. This class of activation functions includes most of frequently used activation functions. We derive the required depth, width and sparsity of a deep neural network to approximate any H\textbackslash "older smooth function upto a given approximation error for the large class of activation functions. Based on our approximation error analysis, we derive the minimax optimality of the deep neural network estimators with the general activation functions in both regression and classification problems.},
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eprint = {1906.06903},
   eprinttype = {arxiv},
   journal = {Entropy},
@@ -2313,13 +2333,13 @@
   pages = {arXiv:0811.2980},
   abstract = {I present a brief review on the determination of the primordial helium abundance by unit mass, Yp. I discuss the importance of the primordial helium abundance in: (a) cosmology, (b) testing the standard big bang nucleosynthesis, (c) studying the physical conditions in H II regions, (d) providing the initial conditions for stellar evolution models, and (e) testing the galactic chemical evolution models.},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eid = {arXiv:0811.2980},
   eprint = {0811.2980},
   eprinttype = {arxiv},
   journal = {ArXiv e-prints},
   keywords = {Astrophysics},
-  primaryClass = {astro-ph}
+  primaryclass = {astro-ph}
 }
 
 @article{Pinsonneault.An.ea2012,
@@ -2417,13 +2437,13 @@
   pages = {arXiv:1710.05941},
   abstract = {The choice of activation functions in deep networks has a significant effect on the training dynamics and task performance. Currently, the most successful and widely-used activation function is the Rectified Linear Unit (ReLU). Although various hand-designed alternatives to ReLU have been proposed, none have managed to replace it due to inconsistent gains. In this work, we propose to leverage automatic search techniques to discover new activation functions. Using a combination of exhaustive and reinforcement learning-based search, we discover multiple novel activation functions. We verify the effectiveness of the searches by conducting an empirical evaluation with the best discovered activation function. Our experiments show that the best discovered activation function, \$f(x) = x \textbackslash cdot \textbackslash text\{sigmoid\}(\textbackslash beta x)\$, which we name Swish, tends to work better than ReLU on deeper models across a number of challenging datasets. For example, simply replacing ReLUs with Swish units improves top-1 classification accuracy on ImageNet by 0.9\textbackslash\% for Mobile NASNet-A and 0.6\textbackslash\% for Inception-ResNet-v2. The simplicity of Swish and its similarity to ReLU make it easy for practitioners to replace ReLUs with Swish units in any neural network.},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eid = {arXiv:1710.05941},
   eprint = {1710.05941},
   eprinttype = {arxiv},
   journal = {ArXiv e-prints},
   keywords = {Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning,Computer Science - Neural and Evolutionary Computing},
-  primaryClass = {cs.NE}
+  primaryclass = {cs.NE}
 }
 
 @article{Rauer.Catala.ea2014,
@@ -2547,13 +2567,13 @@
   month = sep,
   abstract = {Gradient descent optimization algorithms, while increasingly popular, are often used as black-box optimizers, as practical explanations of their strengths and weaknesses are hard to come by. This article aims to provide the reader with intuitions with regard to the behaviour of different algorithms that will allow her to put them to use. In the course of this overview, we look at different variants of gradient descent, summarize challenges, introduce the most common optimization algorithms, review architectures in a parallel and distributed setting, and investigate additional strategies for optimizing gradient descent.},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eid = {arXiv:1609.04747},
   eprint = {1609.04747},
   eprinttype = {arxiv},
   journal = {ArXiv e-prints},
   keywords = {Computer Science - Machine Learning},
-  primaryClass = {cs.LG}
+  primaryclass = {cs.LG}
 }
 
 @article{Rumelhart.Hinton.ea1986,
@@ -2837,13 +2857,13 @@
   month = dec,
   abstract = {Our understanding of the properties and demographics of exoplanets  critically relies on our ability to determine fundamental properties of their host stars. The advent of Gaia and large spectroscopic surveys has now made it in principle possible to infer properties of individual stars, including most exoplanet hosts, to very high precision. However, we show that in practice, such analyses are limited both by uncertainties in the fundamental scale, and by uncertainties in our models of stellar evolution, even for stars similar to the Sun. For example, we show that current uncertainties on measured interferometric angular diameters and bolometric fluxes set a systematic uncertainty floor of \$\textbackslash sim\$2\% in temperature, \$\textbackslash sim\$2\% in luminosity, and \$\textbackslash sim\$4\% in radius. Comparisons between widely available model grids suggest uncertainties of order \$\textbackslash sim\$5\% in mass and \$\textbackslash sim\$20\% in age for main sequence and subgiant stars. While the radius uncertainties are roughly constant over this range of stars, the model dependent uncertainties are a complex function of luminosity, temperature, and metallicity. We provide open-source software for approximating these uncertainties for individual targets, and discuss strategies for reducing these uncertainties in the future.},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eid = {arXiv:2012.07957},
   eprint = {2012.07957},
   eprinttype = {arxiv},
   journal = {ArXiv e-prints},
   keywords = {Astrophysics - Earth and Planetary Astrophysics,Astrophysics - Solar and Stellar Astrophysics},
-  primaryClass = {astro-ph.EP}
+  primaryclass = {astro-ph.EP}
 }
 
 @article{Tayar.Somers.ea2017,
